// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the html structure of the dynamic logo, backend configured 1`] = `
.c6 {
  z-index: 1;
  opacity: 1;
}

.c6:hover {
  cursor: pointer;
}

.c5 {
  z-index: 0;
  background: #4e5d6c;
  border: solid 0px black;
}

.c0 {
  position: relative;
  width: 85%;
  left: 7.5%;
  aspect-ratio: 1 / 1;
  background: linear-gradient(#4692f0,#183251);
  border-radius: 50%;
  box-shadow: 0 0 0 4px black,0 1rem 2rem rgba(0,0,0,0.4);
}

.c1 {
  position: absolute;
  font-weight: bold;
  top: 19.3548%;
  left: 50%;
  z-index: 10;
  -webkit-transform: translate3d(-50%,0,0);
  -ms-transform: translate3d(-50%,0,0);
  transform: translate3d(-50%,0,0);
  font-size: min(4em,10vw);
  text-shadow: 0 4px 15px #000000;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  width: 40%;
  height: 40%;
  position: absolute;
  left: 50%;
  -webkit-transform: translate3d(-50%,-16%,0);
  -ms-transform: translate3d(-50%,-16%,0);
  transform: translate3d(-50%,-16%,0);
  opacity: 0;
  -webkit-animation: byROxX 0.75s ease-out 0.01s forwards;
  animation: byROxX 0.75s ease-out 0.01s forwards;
}

.c3 {
  position: absolute;
  height: 32.358%;
  width: 32.358%;
  left: 33.871%;
  top: 33.871%;
  -webkit-transition-property: height,width,top,left,z-index;
  transition-property: height,width,top,left,z-index;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c3:hover {
  height: 40%;
  width: 40%;
  top: 20%;
  left: 30%;
  z-index: 20;
}

.c4 {
  z-index: 0;
  -webkit-animation: hFPpNl 1s ease-in-out 0.01s forwards;
  animation: hFPpNl 1s ease-in-out 0.01s forwards;
}

.c7 {
  z-index: 1;
  -webkit-animation: blxrvv 1s ease-in-out 0.01s forwards;
  animation: blxrvv 1s ease-in-out 0.01s forwards;
}

.c8 {
  z-index: 2;
  -webkit-animation: dBjIYf 1s ease-in-out 0.01s forwards;
  animation: dBjIYf 1s ease-in-out 0.01s forwards;
}

.c9 {
  z-index: 3;
  -webkit-animation: eJIVD 1s ease-in-out 0.01s forwards;
  animation: eJIVD 1s ease-in-out 0.01s forwards;
}

.c10 {
  z-index: 4;
  -webkit-animation: iZNvIp 1s ease-in-out 0.01s forwards;
  animation: iZNvIp 1s ease-in-out 0.01s forwards;
}

<body>
  <div>
    <div
      class="justify-content-center row"
    >
      <div
        class="col-xl-6 col-lg-7 col-md-8 col-sm-12 col-12"
      >
        <div
          class="c0"
        >
          <p
            class="c1 className"
          >
            Test Site
          </p>
          <div
            class="c2"
          >
            <img
              alt="logo-arrow"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="/arrow.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
          <div
            class="c3 c4"
          >
            <div
              class="c5 rounded-lg shadow-lg ratio ratio-7x5"
            >
              <img
                alt="Card 6"
                class="c6 card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src=""
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
          <div
            class="c3 c7"
          >
            <div
              class="c5 rounded-lg shadow-lg ratio ratio-7x5"
            >
              <img
                alt="Card 1"
                class="c6 card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src=""
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
          <div
            class="c3 c8"
          >
            <div
              class="c5 rounded-lg shadow-lg ratio ratio-7x5"
            >
              <img
                alt="Card 2"
                class="c6 card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src=""
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
          <div
            class="c3 c9"
          >
            <div
              class="c5 rounded-lg shadow-lg ratio ratio-7x5"
            >
              <img
                alt="Card 3"
                class="c6 card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src=""
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
          <div
            class="c3 c10"
          >
            <div
              class="c5 rounded-lg shadow-lg ratio ratio-7x5"
            >
              <img
                alt="Card 4"
                class="c6 card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src=""
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`the html structure of the dynamic logo, no backend configured 1`] = `
.c6 {
  width: 4em;
  height: 4em;
  z-index: 2;
}

.c7 {
  z-index: 1;
  opacity: 0;
}

.c7:hover {
  cursor: auto;
}

.c5 {
  z-index: 0;
  background: #4e5d6c;
  border: solid 2px black;
}

.c0 {
  position: relative;
  width: 85%;
  left: 7.5%;
  aspect-ratio: 1 / 1;
  background: linear-gradient(#4692f0,#183251);
  border-radius: 50%;
  box-shadow: 0 0 0 4px black,0 1rem 2rem rgba(0,0,0,0.4);
}

.c1 {
  position: absolute;
  font-weight: bold;
  top: 19.3548%;
  left: 50%;
  z-index: 10;
  -webkit-transform: translate3d(-50%,0,0);
  -ms-transform: translate3d(-50%,0,0);
  transform: translate3d(-50%,0,0);
  font-size: min(4em,10vw);
  text-shadow: 0 4px 15px #000000;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  width: 40%;
  height: 40%;
  position: absolute;
  left: 50%;
  -webkit-transform: translate3d(-50%,-16%,0);
  -ms-transform: translate3d(-50%,-16%,0);
  transform: translate3d(-50%,-16%,0);
  opacity: 0;
  -webkit-animation: byROxX 0.75s ease-out 0.01s forwards;
  animation: byROxX 0.75s ease-out 0.01s forwards;
}

.c3 {
  position: absolute;
  height: 32.358%;
  width: 32.358%;
  left: 33.871%;
  top: 33.871%;
  -webkit-transition-property: height,width,top,left,z-index;
  transition-property: height,width,top,left,z-index;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c3:hover {
  height: 40%;
  width: 40%;
  top: 20%;
  left: 30%;
  z-index: 20;
}

.c4 {
  z-index: 0;
  -webkit-animation: hFPpNl 1s ease-in-out 0.01s forwards;
  animation: hFPpNl 1s ease-in-out 0.01s forwards;
}

.c8 {
  z-index: 1;
  -webkit-animation: blxrvv 1s ease-in-out 0.01s forwards;
  animation: blxrvv 1s ease-in-out 0.01s forwards;
}

.c9 {
  z-index: 2;
  -webkit-animation: dBjIYf 1s ease-in-out 0.01s forwards;
  animation: dBjIYf 1s ease-in-out 0.01s forwards;
}

.c10 {
  z-index: 3;
  -webkit-animation: eJIVD 1s ease-in-out 0.01s forwards;
  animation: eJIVD 1s ease-in-out 0.01s forwards;
}

.c11 {
  z-index: 4;
  -webkit-animation: iZNvIp 1s ease-in-out 0.01s forwards;
  animation: iZNvIp 1s ease-in-out 0.01s forwards;
}

<body>
  <div>
    <div
      class="justify-content-center row"
    >
      <div
        class="col-xl-6 col-lg-7 col-md-8 col-sm-12 col-12"
      >
        <div
          class="c0"
        >
          <p
            class="c1 className"
          >
            MPC Autofill
          </p>
          <div
            class="c2"
          >
            <img
              alt="logo-arrow"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="/arrow.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
          <div
            class="c3 c4"
          >
            <div
              class="c5 rounded-lg shadow-lg ratio ratio-7x5"
            >
              <div
                class="d-flex justify-content-center align-items-center"
              >
                <div
                  class="c6 spinner-border"
                  role="status"
                  size="4"
                >
                  <span
                    class="visually-hidden"
                  >
                    Loading...
                  </span>
                </div>
              </div>
              <img
                alt="Your Design Here"
                class="c7 card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                sizes="100vw"
                src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
                srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
          <div
            class="c3 c8"
          >
            <div
              class="c5 rounded-lg shadow-lg ratio ratio-7x5"
            >
              <div
                class="d-flex justify-content-center align-items-center"
              >
                <div
                  class="c6 spinner-border"
                  role="status"
                  size="4"
                >
                  <span
                    class="visually-hidden"
                  >
                    Loading...
                  </span>
                </div>
              </div>
              <img
                alt="Your Design Here"
                class="c7 card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                sizes="100vw"
                src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
                srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
          <div
            class="c3 c9"
          >
            <div
              class="c5 rounded-lg shadow-lg ratio ratio-7x5"
            >
              <div
                class="d-flex justify-content-center align-items-center"
              >
                <div
                  class="c6 spinner-border"
                  role="status"
                  size="4"
                >
                  <span
                    class="visually-hidden"
                  >
                    Loading...
                  </span>
                </div>
              </div>
              <img
                alt="Your Design Here"
                class="c7 card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                sizes="100vw"
                src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
                srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
          <div
            class="c3 c10"
          >
            <div
              class="c5 rounded-lg shadow-lg ratio ratio-7x5"
            >
              <div
                class="d-flex justify-content-center align-items-center"
              >
                <div
                  class="c6 spinner-border"
                  role="status"
                  size="4"
                >
                  <span
                    class="visually-hidden"
                  >
                    Loading...
                  </span>
                </div>
              </div>
              <img
                alt="Your Design Here"
                class="c7 card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                sizes="100vw"
                src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
                srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
          <div
            class="c3 c11"
          >
            <div
              class="c5 rounded-lg shadow-lg ratio ratio-7x5"
            >
              <div
                class="d-flex justify-content-center align-items-center"
              >
                <div
                  class="c6 spinner-border"
                  role="status"
                  size="4"
                >
                  <span
                    class="visually-hidden"
                  >
                    Loading...
                  </span>
                </div>
              </div>
              <img
                alt="Your Design Here"
                class="c7 card-img card-img-fade-in"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                sizes="100vw"
                src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
                srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
